--- a/b_example/b_basic/html/exam_02.html
+++ b/b_example/b_basic/html/exam_02.html
@@ -33,11 +33,17 @@
 .side_indicator{ position: absolute; top:50%; margin-top: -175px; right: 30px;
   width: 50px; height:450px; background-color: #0af;}
 .side_indicator>ul{width: 100%; height:100%;  padding: 10px; box-sizing: border-box;}
-.indicator{width:100%; height: 30px; background-color: #fff;
-  margin-bottom:45px; border-radius:100%; overflow: hidden;}
-.indicator>a{display: block; width: 100%; height: 100%;background-color: #fa0; }
+.indicator{width:100%; height: 30px; margin-bottom:45px;}
+.indicator>a{position:relative; z-index:100; display:block; width:100%; height:100%;background-color:#fa0; 
+  border-radius:100%;}
 .indicator.last{margin-bottom: 0;}
 /*.side_indicator li:last-child{margin-bottom: 0;}*/
+
+.indicator>a:hover>span,
+.indicator>a:focus>span{display: block;
+  position: absolute; right: 50px; top: 0;
+  width:200px; height:30px; background-color: #fff;}
+
   </style>
 </head>
 <body>
