--- a/b_example/b_basic/index.html
+++ b/b_example/b_basic/index.html
@@ -17,6 +17,7 @@
         position을 이용한 웹페이지 구성1
       </a>
     </li>
+    <li><a href="./html/rwd_01.html">반응형 첫번째 테스트</a></li>
   </ul>
   <!-- script -->
   <script src="./js/base/jquery-3.3.1.min.js"></script>
