--- a/b_example/b_basic/index.html
+++ b/b_example/b_basic/index.html
@@ -12,12 +12,9 @@
   <!-- layout -->
   <h1>기본 웹만들기!!!</h1>
   <ul>
-    <li>
-      <a href="./html/position_layout_01.html">
-        position을 이용한 웹페이지 구성1
-      </a>
-    </li>
-    <li><a href="./html/rwd_01.html">반응형 첫번째 테스트</a></li>
+    <li><a href="./html/position_layout_01.html">position 기초,웹페이지 구성</a></li>
+    <li><a href="./html/rwd_01.html">반응형 첫번째 - 기본테스트</a></li>
+    <li><a href="./html/rwd_02.html">반응형 두번째 - 레이아웃기초</a></li>
   </ul>
   <!-- script -->
   <script src="./js/base/jquery-3.3.1.min.js"></script>
