--- a/b_example/a02_beginner/index.html
+++ b/b_example/a02_beginner/index.html
@@ -9,16 +9,9 @@
   <!-- layout -->
   <h1>웹페이지 학습하기</h1>
   <ul>
-    <li>
-      <a href="./html/clearboth_01.html">
-        clearboth 개념이해하기(float기능과 함께)
-      </a>
-    </li>
-    <li>
-      <a href="./html/position_01.html">
-        position 기초내용이해하기
-      </a>
-    </li>
+    <li><a href="./html/clearboth_01.html"> clearboth 개념이해하기(float기능과 함께)</a></li>
+    <li><a href="./html/position_01.html">position 기초내용이해하기</a></li>
+    <li><a href="./html/font_01.html">font 이해 첫번째</a></li>
   </ul>
   <!-- script -->
 <script>
