--- a/b_example/a02_beginner/html/font_01.html
+++ b/b_example/a02_beginner/html/font_01.html
@@ -114,6 +114,51 @@
      </span><!-- .em_01 -->
    </p>
 <!-- ============================================== -->
+  <h4>rem 단위로 체크</h4>
+   <p class="rem_check size_box">큰영역으로 텍스트 36pt 크기<br />
+     <span class="rem_01">절반크기로 체크 18pt 크기<br />
+       <span class="rem_02">다시 절반크기로 체크 9pt 크기<br />
+         <span class="rem_03">두배 크기로 체크 18pt 크기<br />
+           <span class="rem_04">다시 절반으로 줄이기 9pt 크기
+           </span><!-- .rem_04 -->
+         </span><!-- .rem_03 -->
+       </span><!-- .rem_02 -->
+     </span><!-- .rem_01 -->
+   </p>
+<!-- ============================================== -->
+ <h3>덤! em과 rem의 서체가아닌 크기값으로 구분!! </h3>
+ <div class="px_box">w160,h160
+   <div class="px_01">w50%,h50%
+     <div class="px_02">w50%,h50%
+       <div class="px_03">w200%,h200%
+         <div class="px_04">w50%,h50%</div>
+       </div>
+     </div>
+   </div>
+ </div>
+ <!--  ======================= -->
+<hr />
+ <div class="em_box">w160,h160
+   <div class="em_box_01">w50%,h50%
+     <div class="em_box_02">w50%,h50%
+       <div class="em_box_03">w200%,h200%
+         <div class="em_box_04">w50%,h50%</div>
+       </div>
+     </div>
+   </div>
+ </div>
+ <!--  ======================= -->
+<hr />
+ <div class="rem_box">w160,h160
+   <div class="rem_box_01">w50%,h50%
+     <div class="rem_box_02">w50%,h50%
+       <div class="rem_box_03">w200%,h200%
+         <div class="rem_box_04">w50%,h50%</div>
+       </div>
+     </div>
+   </div>
+ </div>
+
  </div> 
 </body>
 </html>
