--- a/b_example/a02_beginner/html/font_02.html
+++ b/b_example/a02_beginner/html/font_02.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<!--   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700&amp;subset=korean" rel="stylesheet"> -->
+  <link rel="stylesheet" href="../fonts/stylesheet.css" />
   <link rel="stylesheet" href="../css/base/reset.css" />
   <link rel="stylesheet" href="../css/base/common.css" />
   <link rel="stylesheet" href="../css/src/font_02.css" />
+
   <title>font 2</title>
 </head>
 <body>
@@ -51,13 +54,69 @@
     HTML
     </abbr>
     글자를 표기할때, 시각으로는 소문자로 표기하고 싶을때,
-    <span class="upper"> javascript </span>글자를 대문자로 표현하고 싶을때.
+    <span class="upper"> javascript </span>글자를 대문자로 표현하고 싶을때.<br />
+    <span class="cap">
+      javascript query
+    </span>용어를 단어의 첫글자만 대문자로 처리하고 싶을때    
   </p>
   <!-- abbr태그는 두문자어(약어표기)코드 -->
+  
+  <hr />
+  <h3>말줄임표 만들기</h3>
+  <p class="ellip">말줄임표는 한줄만 가능하다!!!</p>
+  <p class="ellip">말줄임표는 넘치는 텍스트를 숨겨야한다.</p>
+  <p class="ellip">말줄임표는 텍스트를 의미없는 공백을 없애야한다.</p>
+  <p class="ellip">말줄임표는 박스뿐아니라, 글자도 넘칠경우를 처리해야한다.</p>
 
+  <hr />
+  <h2>굵기에대해 되집어 보자!</h2>
+  <p>서체는 디자이너 또는 관련회사에서 제작, <br />
+     이때, 해당 서체의 기울기 또는 굵기는 제작을 했을경우에만 적용이 가능!!
+   </p>
+   <p>
+     굵기의 표기방법 또한, 디자인/회사의 제작적용에 따라 이름이 달라질 수 있다.<br />
+     기본 용어로 사용한다면: ultra thin, thin, light, regular, normal, bold, bolder ..... <br />
+     수치로 사용한다면: 100, 200(thin), 300, 400(normal, regular), 500, 600(bold), 700, 800(bolder), 900
+   </p>
 
-
+   <hr />
+   <h2>웹폰트를 사용해 보자!</h2>
+   <p class="webfont">CDN방식(웹상에 존재하는것을 컴퓨터/별도 디렉토리에 다운받지않고, 인터넷으로 연결하여 사용하는 기술)으로 적용하기<br />
+    구글 웹폰트를 이용하여 적용해보기:
+    <a href="http://fonts.google.com">http://fonts.google.com</a>
+   </p>
   </div>
+
+<!--  webfont 
+  css상에서 웹폰트를 적용해야한다.
+  기본은 웹상에서 서체의 문제를 해결하여 처리해야함.
+  실제로 사용하는 일반서체는 불가능하기 때문에.
+  별도의 변환기능이 필요하다.
+  2018.11월 현재는 한글서체를 잘변환하는 사이트가 많이 없다는 것이 한계
+
+  https://transfonter.org 사이트에서는 그나마 잘 변환이된다.
+
+  이때 다운받은 파일을 폴더로 등록하여 css로 연결후 사용.
+
+  =======================================
+  * 내마음대로 서체를 설정하는 기능
+
+  @font-face {
+    font-family:'만들 서체의 이름';
+    src: url('사용할 서체를 직접 가져와서 링크');   
+    src: url('사용할 서체를 직접 가져와서 링크') format(사용서체방식),
+         url('사용할 서체를 직접 가져와서 링크') format(사용서체방식),
+         url('사용할 서체를 직접 가져와서 링크') format(사용서체방식),
+         url('사용할 서체를 직접 가져와서 링크') format(사용서체방식),
+         url('사용할 서체를 직접 가져와서 링크') format(사용서체방식),
+         url('사용할 서체를 직접 가져와서 링크') format(사용서체방식);
+    font-weight:굵기 설정;
+    font-style:기울기 설정;
+  }
+-->
+
+
+
 
 </body>
 </html>
