--- a/b_example/b_basic/html/rwd_03_homework.html
+++ b/b_example/b_basic/html/rwd_03_homework.html
@@ -30,7 +30,7 @@
     respond.js : ie9이하의 브라우저에서 반응형이 되게
   -->
   <!-- link:touch -->
-  <link rel="apple-touch-icon" href="../favicon.png">
+  <link rel="apple-touch-icon" href="../favicon.png">  
   <!-- link:favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="../favicon.png">
@@ -39,7 +39,11 @@
 </head>
 <body>
   <!-- layout -->
-  <div id="wrap"></div>
+  <div id="wrap">
+    <h1>logo</h1>
+    <div class="btn"></div>
+
+  </div>
 
   <!-- script(jQuery) -->
   <script src="../js/base/jquery-3.3.1.min.js"></script>
