--- a/b_example/b_basic/html/rwd_03_homework.html
+++ b/b_example/b_basic/html/rwd_03_homework.html
@@ -40,10 +40,27 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <h1>logo</h1>
-    <div class="btn"></div>
+    <div id="headBox">
+      <h1>logo</h1>
+    </div><!-- // #headBox -->
+    
+    <div id="addBanner">
+      <h2>웹페이지 광고영역</h2>
+    </div><!-- // #addBanner -->
 
-  </div>
+    <div id="infoBox">
+      <h2>infoBox</h2>
+    </div><!-- // #infoBox -->
+
+    <div id="contentBox">
+      <h2>contentBox</h2>
+    </div><!-- // #contentBox -->
+
+    <div id="footBox">
+      <h2>footBox</h2>
+    </div><!-- // #footBox -->
+
+  </div><!-- // #wrap -->
 
   <!-- script(jQuery) -->
   <script src="../js/base/jquery-3.3.1.min.js"></script>
