--- a/b_example/b_basic/html/rwd_03_homework.html
+++ b/b_example/b_basic/html/rwd_03_homework.html
@@ -41,7 +41,14 @@
   <!-- layout -->
   <div id="wrap">
     <div id="headBox">
-      <h1>logo</h1>
+      <div class="container">
+
+        <h1>logo</h1>
+        <nav id="navBox">
+          <h2 class="hidden">navigation</h2>
+        </nav>
+        
+      </div>
     </div><!-- // #headBox -->
 
     <div id="addBanner">
