--- a/b_example/b_basic/html/rwd_03_homework.html
+++ b/b_example/b_basic/html/rwd_03_homework.html
@@ -40,32 +40,51 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <div id="headBox">
+    <header id="headBox">
       <div class="container">
 
         <h1>logo</h1>
         <nav id="navBox">
           <h2 class="hidden">navigation</h2>
+          <div class="sign_up hidden_wrap"><a href="#"><span>sign up</span></a></div>
+          <div class="menu hidden_wrap">
+            <h3 class="hidden">global navigation</h3>
+            <!-- *button  type="속성"  : submit, reset, button -->
+            <button type="button"><span>메뉴</span></button>
+
+            <div class="gnb">
+              <ul>
+                <li><a href="#"><span>link_01</span></a></li>
+                <li><a href="#"><span>link_02</span></a></li>
+                <li><a href="#"><span>link_03</span></a></li>
+                <li><a href="#"><span>link_04</span></a></li>
+              </ul>
+            </div>
+
+          </div>
         </nav>
-        
+
       </div>
-    </div><!-- // #headBox -->
+    </header><!-- // #headBox -->
 
-    <div id="addBanner">
-      <h2>웹페이지 광고영역</h2>
-    </div><!-- // #addBanner -->
+    <section id="addBanner">
+      <h2 class="hidden">웹페이지 광고영역</h2>      
 
-    <div id="infoBox">
-      <h2>infoBox</h2>
-    </div><!-- // #infoBox -->
+    </section><!-- // #addBanner -->
 
-    <div id="contentBox">
-      <h2>contentBox</h2>
-    </div><!-- // #contentBox -->
+    <article id="infoBox">
+      <h2 class="hidden">infoBox</h2>
+    </article><!-- // #infoBox -->
 
-    <div id="footBox">
-      <h2>footBox</h2>
-    </div><!-- // #footBox -->
+    <article id="contentBox">
+      <h2 class="hidden">contentBox</h2>
+    </article><!-- // #contentBox -->
+
+    <footer id="footBox">
+      <div class="container">
+        <h2 class="hidden">footBox</h2>
+      </div>    
+    </footer><!-- // #footBox -->
 
   </div><!-- // #wrap -->
 
