--- a/b_example/b_basic/html/rwd_03_homework.html
+++ b/b_example/b_basic/html/rwd_03_homework.html
@@ -73,12 +73,21 @@
 
     </section><!-- // #addBanner -->
 
-    <article id="infoBox">
+    <article id="infoBox" class="clearfix">
       <h2 class="hidden">infoBox</h2>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
     </article><!-- // #infoBox -->
 
     <article id="contentBox">
-      <h2 class="hidden">contentBox</h2>
+      <div class="container clearfix">
+        <h2 class="hidden">contentBox</h2>
+        <div class="con_in cont_01">cont_01</div>
+        <div class="con_in cont_02">cont_02</div>
+        <div class="con_in cont_03">cont_03</div>
+      </div>
     </article><!-- // #contentBox -->
 
     <footer id="footBox">
