--- a/b_example/b_basic/html/slide_banner_01.html
+++ b/b_example/b_basic/html/slide_banner_01.html
@@ -28,16 +28,24 @@
        <!-- 3개의 광고영역 제작순서: 
           - 0: 재생/정지 버튼
           - 1: 인디케이터 
-          - 2: 좌우 버튼
+          - 2: 좌우 버튼(entity code)
           - 3: 광고영역
         -->
-        <div class="view_indicator"></div>
+        <div class="view_indicator">
+          <ul class="hidden_wrap">
+            <li><a href="#view_01"><span>view_01의 내용 설명</span></a></li>
+            <li><a href="#view_02"><span>view_02의 내용 설명</span></a></li>
+            <li><a href="#view_03"><span>view_03의 내용 설명</span></a></li>
+          </ul>
+        </div>
 
         <div class="view_btn hidden_wrap">
           <button type="button" class="next_btn">
+            &rsaquo;
             <span>다음광고보기</span>
           </button>
           <button type="button" class="prev_btn">
+            &lsaquo;
             <span>이전광고보기</span>
           </button>
         </div>
@@ -45,9 +53,9 @@
         <div class="view_banner">
           <h3 class="hidden">광고내용</h3>
           <div class="view_banner_outer">
-            <div class="view_banner_01">view_banner_01</div>
-            <div class="view_banner_02">view_banner_02</div>
-            <div class="view_banner_03">view_banner_03</div>
+            <div class="view_banner_01" id="view_01">view_banner_01</div>
+            <div class="view_banner_02" id="view_02">view_banner_02</div>
+            <div class="view_banner_03" id="view_03">view_banner_03</div>
           </div>
         </div>
 
