--- a/b_example/c_normal/html/jquery/selector_01.html
+++ b/b_example/c_normal/html/jquery/selector_01.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../../fonts/nanumFonts.css" />
   <link rel="stylesheet" href="../../css/base/reset.css" />
   <link rel="stylesheet" href="../../css/base/common.css" />
-  <link rel="stylesheet" href="../../css/src/jquery/selector_01.css" />
+  <!-- <link rel="stylesheet" href="../../css/src/jquery/selector_01.css" /> -->
 
   <!--[if IE]>
     <script src="../../ie/html5shiv/dist/html5shiv.min.js"></script>
@@ -24,7 +24,20 @@
 </head>
 <body>
   <!-- layout -->
-
+  <div id="wrap">
+    <header id="headBox">
+      <h1>jquery를 이용하여 css를 제작해보겠습니다.</h1>
+    </header>
+    <section id="list">
+     <ul>
+        <li>list_00</li>
+        <li>list_01</li>
+        <li>list_02</li>
+        <li>list_03</li>
+        <li>list_04</li>
+      </ul> 
+    </section>
+  </div>
   <!-- script(jquery) -->
   <script src="../../js/base/jquery-3.3.1.min.js"></script>
   <script src="../../js/base/jquery-ui.min.js"></script>
