slide banner 01 set_01

--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -28,6 +28,7 @@
       <h2>jquery</h2>
       <ul>
         <li><a href="./jquery/selector_01.html">jquery 선택자</a></li>
+        <li><a href="./jquery/slide_banner_02.html">slide banner 기능이해하기1</a></li>
       </ul>
    </div>
 
