slide banner set 02

--- a/b_example/c_normal/html/jquery/slide_banner_02.html
+++ b/b_example/c_normal/html/jquery/slide_banner_02.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=3.0, minimum-scale=0.5" />
 
   <link rel="stylesheet" href="../../fonts/nanumFonts.css" />
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  
   <link rel="stylesheet" href="../../css/base/reset.css" />
   <link rel="stylesheet" href="../../css/base/common.css" />
   <link rel="stylesheet" href="../../css/src/jquery/slide_banner_02.css" />
@@ -32,7 +35,7 @@
 
        <div class="view_indicator hidden_wrap">
          <ul>
-           <li><a href="#"><span>banner_01</span></a></li>
+           <li class="action"><a href="#"><span>banner_01</span></a></li>
            <li><a href="#"><span>banner_02</span></a></li>
            <li><a href="#"><span>banner_03</span></a></li>
            <li><a href="#"><span>banner_04</span></a></li>
@@ -41,35 +44,41 @@
        </div>
 
        <div class="view_btn hidden_wrap">
-         <button type="button" class="btn"><span>보기버튼</span></button>
-         <button type="button" class="btn"><span>보기버튼</span></button>
+          <button type="button" class="btn next_btn">
+            <i class="fas fa-arrow-circle-right"></i>
+            <span>다음 광고 보기버튼</span>
+          </button>
+          <button type="button" class="btn prev_btn">
+            <i class="fas fa-arrow-circle-left"></i>
+            <span>이전 광고 보기버튼</span>
+          </button>
        </div>
 
        <div class="view_banner">
          <div class="view_banner_outer">
            <div class="banner_01">
-             <h4>광고제목</h4>
-             <p>해당광고 내용</p>
+             <h4>Add title 01</h4>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />Quidem voluptatem in quae doloremque ea, perferendis <br />eligendi nobis tempora vel iure.</p>
              <div class="link"><a href="#">자세히 보기</a></div>
            </div>
            <div class="banner_02">
-             <h4>광고제목</h4>
-             <p>해당광고 내용</p>
+             <h4>Add title 02</h4>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />Modi quis, quibusdam iste doloribus nihil, architecto! Aut <br />sunt obcaecati, eveniet quibusdam, sint tempora similique ad assumenda minus totam et officiis a.</p>
              <div class="link"><a href="#">자세히 보기</a></div>
            </div>
            <div class="banner_03">
-             <h4>광고제목</h4>
-             <p>해당광고 내용</p>
+             <h4>Add title 03</h4>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />Velit eaque sunt aspernatur doloribus sint, at in itaque, <br />quisquam aliquid, numquam delectus perferendis iste inventore. Sequi culpa alias minima quibusdam. Dolores quo recusandae fugit a vel labore modi tempore maxime. Alias.</p>
              <div class="link"><a href="#">자세히 보기</a></div>
            </div>
            <div class="banner_04">
-             <h4>광고제목</h4>
-             <p>해당광고 내용</p>
+             <h4>Add title 04</h4>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />Praesentium optio, error non nihil voluptatum natus magni <br />voluptatem repellat impedit culpa harum possimus iste! Consectetur commodi voluptates eligendi sequi ipsum nam laborum, recusandae vitae aliquid optio ad aliquam! Esse eaque ut possimus, ab maxime. Odit, ratione minus accusamus excepturi quibusdam aliquam.</p>
              <div class="link"><a href="#">자세히 보기</a></div>
            </div>
            <div class="banner_05">
-             <h4>광고제목</h4>
-             <p>해당광고 내용</p>
+             <h4>Add title 05</h4>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />Aliquid laudantium dolores quo. Enim quos consequatur <br />praesentium sapiente magni quas laborum asperiores ullam sed. Perspiciatis odit, sed id. Maxime consequatur facere sed quas veritatis harum quibusdam eveniet beatae illo error sint odio perspiciatis, unde alias quaerat quis. Officia voluptas itaque nihil expedita nam iure consectetur. Dolorum harum eum doloribus voluptates rerum.</p>
              <div class="link"><a href="#">자세히 보기</a></div>
            </div>
          </div>
