--- a/b_example/a02_beginner/index.html
+++ b/b_example/a02_beginner/index.html
@@ -14,6 +14,10 @@
     <li><a href="./html/font_01.html">font 이해 첫번째</a></li>
     <li><a href="./html/font_02.html">font 이해 두번째</a></li>
   </ul>
+  <h2>배경이미지</h2>
+  <ul>
+    <li><a href="./html/background_01.html">배경이미지 이해하기1</a></li>
+  </ul>
   <!-- script -->
 <script>
   // window.location = "./html/layout_test_result_02.html";
