--- a/b_example/a02_beginner/html/background_01.html
+++ b/b_example/a02_beginner/html/background_01.html
@@ -47,7 +47,64 @@
         (IS기법: image splite)</h3>
       <div class="icon icon_04"></div>
     </article>
+    <article class="exam">
+      <h3>IS기법 연습하기</h3>
+      <ul>
+        <li><a href="#"><span>
+        가로:1번째,세로:3번째 
+        | hover: x 3, y 1 
+        | acvive: x 1 , y 1 
+        | focus: x 2, y 2
+        </span></a></li>
+
+        <li><a href="#"><span>x-2,y-1 | hover: x-5, y-2</span></a></li>
+        <li><a href="#"><span>x-3,y-4 | hover: x-4, y-3</span></a></li>
+        <li><a href="#"><span>x-5,y-3 | hover: x-5, y-4</span></a></li>
+        <li><a href="#"><span>x-5,y-2 | hover: x-3, y-3</span></a></li>
+        <li><a href="#"><span>x-3,y-4 | hover: x-6, y-2</span></a></li>
+        <li><a href="#"><span>x-3,y-3 | hover: x-7, y-3</span></a></li>
+        <li><a href="#"><span>x-6,y-4 | hover: x-3, y-3</span></a></li>
+      </ul>
+    </article>
+
+
+    <article id="bgArea">
+      <h2>배경 영역에 따른 의미</h2>
+      <h3>배경색상의 보이는 영역을 컨트롤하기</h3>
+      <div class="bg_area area_01">이미지 위치 기본형</div>
+      <div class="bg_area area_02">border-box</div>
+      <div class="bg_area area_03">padding-box</div>
+      <div class="bg_area area_04">content-box</div>
+
+      <h3>배경 이미지의 영역을 컨트롤</h3>
+      <div class="bg_area bg_img img_01"></div>
+      <div class="bg_area bg_img img_02"></div>
+      <div class="bg_area bg_img img_03"></div>
+      <div class="bg_area bg_img img_04"></div>
+    </article>
   </div>
+
+
+    <div class="box">
+      <div class="what">
+        이곳에 내용을 파악해보자
+      </div>
+    </div>
+
+  <article id="bgArea_02">
+    <h3>배경이미지 처리방법</h3>
+    <div class="fixed">배경이미지를 고정</div>
+    <div class="scroll">배경이미지를 따라움직이기</div>
+  </article>
+
+  <article id="gradient"> 
+    <h3>배경이미지를 그라데이션으로 처리</h3>
+    <div class="linear_01">세로형으로 처리</div>
+    <div class="linear_02">가로형으로 처리</div>
+    <div class="linear_03">대각선형으로 여러개 처리</div>
+    <div class="linear_04">hover기능 수행</div>
+    <div class="radial_01">원형 수행</div>
+  </article>
 
   <!-- script(jQuery) -->
   <script src="../js/base/jquery-3.3.1.min.js"></script>
