--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -29,6 +29,7 @@
       <ul>
         <li><a href="./jquery/selector_01.html">jquery 선택자</a></li>
         <li><a href="./jquery/slide_banner_02.html">slide banner 기능이해하기1</a></li>
+        <li><a href="./jquery/inner_content_01.html">내부에 내용을 담는 기능 만들기</a></li>
       </ul>
    </div>
 
