--- a/b_example/c_normal/html/jquery/inner_content_01.html
+++ b/b_example/c_normal/html/jquery/inner_content_01.html
@@ -24,6 +24,7 @@
    <div id="wrap">
      <header id="headBox">
        <h1>html을 jQuery를 통해 생성 및 처리하기</h1>
+       <!-- <nav id="gnb"></nav> -->
      </header>
 
      <section id="viewBox">
