--- a/b_example/c_normal/html/jquery/inner_content_01.html
+++ b/b_example/c_normal/html/jquery/inner_content_01.html
@@ -24,7 +24,18 @@
    <div id="wrap">
      <header id="headBox">
        <h1>html을 jQuery를 통해 생성 및 처리하기</h1>
-       <!-- <nav id="gnb"></nav> -->
+ <!--       <nav id="gnb">
+         <ul>
+           <li><a href="http://google.com">list</a></li>
+           <li><a href="http://naver.com">list</a></li>
+           <li><a href="http://daum.net">list</a></li>
+           <li><a href="http://w3schools.com">list</a></li>
+           <li><a href="http://caniuse.com">list</a></li>
+           <li><a href="http://kakaoi.com">list</a></li>
+         </ul>
+       </nav>
+      sub1, sub2, sub3 ..... 50개의 페이지라면? ㅜㅜ
+ -->
      </header>
 
      <section id="viewBox">
