--- a/b_example/c_normal/html/jquery/exam_test_01.html
+++ b/b_example/c_normal/html/jquery/exam_test_01.html
@@ -49,7 +49,7 @@
         </div>
         <div class="product hidden_wrap">
          <ul>
-          <li><a href="#"><span>상품설명 01</span></a></li>
+          <li><a href="http://google.com" target="_parent">네이버로 이동</a></li>
           <li><a href="#"><span>상품설명 02</span></a></li>
           <li><a href="#"><span>상품설명 03</span></a></li>
          </ul>
