make jquery to html

--- a/b_example/c_normal/html/jquery/make_jquery.html
+++ b/b_example/c_normal/html/jquery/make_jquery.html
@@ -69,7 +69,6 @@
             <dt>news_title</dt>
             <dd>news_content</dd>
           </dl>
-
       </div>
     </article>
     <!-- // #newsBox -->
@@ -82,6 +81,10 @@
     </footer>
     <!-- // #footBox -->
   </div>
+
   
+  <script src="../../js/base/jquery-3.3.1.min.js"></script>
+  <script src="../../js/base/jquery-ui.min.js"></script>
+  <script src="../../js/base/make_jquery_test_01.js"></script>
 </body>
 </html>
