--- a/b_example/c_normal/html/jquery/make_jquery.html
+++ b/b_example/c_normal/html/jquery/make_jquery.html
@@ -17,6 +17,13 @@
           <li><a href="#">link_name_03</a></li>
           <li><a href="#">link_name_04</a></li>
           <li><a href="#">link_name_05</a></li>
+          <li><a href="#">link_name_06</a></li>
+          <li><a href="#">link_name_07</a></li>
+          <li><a href="#">link_name_08</a></li>
+          <li><a href="#">link_name_09</a></li>
+          <li><a href="#">link_name_10</a></li>
+          <li><a href="#">link_name_11</a></li>
+          <li><a href="#">link_name_12</a></li>
         </ul>
       </nav>
     </header>
@@ -63,12 +70,13 @@
       <h2>newsBox</h2>
       <div class="news_outer">
         <!-- 뉴스 총 12개 삽입 -->
-        <div class="news_01"></div>
+        <div class="news_01">
           <div class="img"><span>뉴스이미지1</span></div>
           <dl class="news_content">
             <dt>news_title</dt>
             <dd>news_content</dd>
           </dl>
+        </div>
       </div>
     </article>
     <!-- // #newsBox -->
