gcass page insert

--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -32,6 +32,11 @@
         <li><a href="./jquery/inner_content_01.html">내부에 내용을 담는 기능 만들기</a></li>
         <li><a href="./jquery/make_jquery_01_result.html">jquery를 활용하여 html구조를 제작하기</a></li>
       </ul>
+      <hr />
+      <h2>gcass 사이트 제작하기</h2>
+      <ul>
+        <li><a href="./gcass/main_layout.html">메인페이지 레이아웃 제작</a></li>
+      </ul>
    </div>
 
   <!-- script(jQuery) -->
