--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -20,7 +20,13 @@
 <body>
 	<!-- layout -->
 	<div id="wrap">
-		<h1>gcass</h1>
+		<aside id="homeBox"></aside>
+		<div class="box_wrap">
+			<header id="headBox">
+			</header>
+			<section id="viewBox"></section>
+		</div>
+		<footer id="footBox"></footer>
 	</div>
 	<!-- script -->
 	<script src="../../js/base/jquery-3.3.1.min.js"></script>
