gcass 전체 영역 배경내용 설정

--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -20,13 +20,16 @@
 <body>
 	<!-- layout -->
 	<div id="wrap">
-		<aside id="homeBox"></aside>
-		<div class="box_wrap">
+		<aside id="homeBox">home</aside>
+		<div class="box_wrap clearfix">
 			<header id="headBox">
+				logo는 어디에?
 			</header>
 			<section id="viewBox"></section>
 		</div>
-		<footer id="footBox"></footer>
+		<footer id="footBox">
+			
+		</footer>
 	</div>
 	<!-- script -->
 	<script src="../../js/base/jquery-3.3.1.min.js"></script>
