gcass homeBox layout

--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -20,7 +20,20 @@
 <body>
 	<!-- layout -->
 	<div id="wrap">
-		<aside id="homeBox">home</aside>
+		<aside id="homeBox">
+			<h2 class="hidden">sub menu</h2>
+			<ul class="hidden_wrap">
+				<li><a href="#" target="_blank">
+					<span>home</span>
+				</a></li>
+				<li><a href="#" target="_blank">
+					<span>study</span>
+				</a></li>
+				<li><a href="#" target="_blank">
+					<span>education</span>
+				</a></li>
+			</ul>
+		</aside>
 		<div class="box_wrap clearfix">
 			<header id="headBox">
 				logo는 어디에?
