--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -15,14 +15,14 @@
 		<script src="../../ie/css3pie/PIE_IE9.js"></script>
 		<script src="../../ie/respond/dest/respond.min.js"></script>
 	<![endif]-->
-	<title>gcass</title>
+	<title>지카스</title>
 </head>
 <body>
 	<!-- layout -->
 	<div id="wrap">
 		<aside id="homeBox">
 			<h2 class="hidden">sub menu</h2>
-			<ul class="hidden_wrap">
+			<ul>
 				<li><a href="#" target="_blank">
 					<span>home</span>
 				</a></li>
@@ -34,10 +34,30 @@
 				</a></li>
 			</ul>
 		</aside>
+		<!-- // #homeBox -->
+
 		<div class="box_wrap clearfix">
 			<header id="headBox">
-				logo는 어디에?
+				<h1 class="hidden_wrap">
+					<a href="./main_layout.html">
+					<span><abbr title="greeen computer art school student web">gcass</abbr></span>
+					</a>
+				</h1>
+
+				<nav id="gnb">
+					<h2 class="hidden">gcass 전체 메뉴</h2>
+					<ul>
+						<li><a href="#" target="_blank">about</a></li>
+						<li><a href="#" target="_blank">study</a></li>
+						<li><a href="#" target="_blank">photo</a></li>
+						<li><a href="#" target="_blank">blog</a></li>
+						<li><a href="#" target="_blank">press</a></li>
+						<li><a href="#" target="_blank">q and a</a></li> 
+					</ul>
+				</nav>
 			</header>
+			<!-- // #headBox -->
+
 			<section id="viewBox"></section>
 		</div>
 		<footer id="footBox">
