--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -58,10 +58,54 @@
 			</header>
 			<!-- // #headBox -->
 
-			<section id="viewBox"></section>
+			<section id="viewBox">
+				<h2 class="hidden">광고 메세지</h2>
+				<div class="com">
+					<!-- 컴퓨터 이미지 삽입 -->
+				</div>
+			</section>
 		</div>
 		<footer id="footBox">
 			
+			<h2><span class="hidden">gcass 회사정보</span></h2>
+
+			<div class="info_area">
+				<h3 class="hidden">location</h3>
+				<p class="location"><a href="#"><span>회사 위치 안내 서비스</span></a></p>
+
+				<h3 class="hidden">social network service</h3>
+				<ul>
+					<li><a href="#" target="_blank"><span>youtube</span></a></li>
+					<li><a href="#" target="_blank"><span>facebook</span></a></li>
+					<li><a href="#" target="_blank"><span>kakaotalk</span></a></li>
+				</ul>
+			</div>
+
+			<address class="addr_area">
+				<p>
+					<strong>address</strong> 
+					<i class="hidden"> - </i> 경기도 수원시 매산로 2가 12-1 2층 
+					<span class="hidden"> - </span> 
+					<strong>telephone</strong> 
+					<i class="hidden"> - </i> 031 243 2111
+				</p>
+				<p> &copy;2018 gcass corp.</p>
+				<!-- ⓒ   -->
+			</address>
+
+			<div class="more_area">
+				<h3 class="hidden">기타 gcass family 사이트</h3>
+				<dl>
+					<dt>web page</dt>
+					<dd><a href="//www.greenart.co.kr" target="_blank">그린컴퓨터 아트학원</a></dd>
+					<dt>family cafe</dt>
+					<dd><a href="//webportfolio.github.io" target="_blank">시도 깃허브</a></dd>
+				</dl>
+
+				<h3 class="hidden">추가내용</h3>
+				<p>본 사이트는 교육용 목적으로 사용한 페이지로, 어떠한 경우라도 영리를 취하지 않습니다.</p>
+			</div>
+
 		</footer>
 	</div>
 	<!-- script -->
