gcass footer sns

--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -66,15 +66,15 @@
 			</section>
 		</div>
 		<footer id="footBox">
-			
+
 			<h2><span class="hidden">gcass 회사정보</span></h2>
 
 			<div class="info_area">
 				<h3 class="hidden">location</h3>
-				<p class="location"><a href="#"><span>회사 위치 안내 서비스</span></a></p>
+				<p class="location hidden_wrap"><a href="#"><span>회사 위치 안내 서비스</span></a></p>
 
 				<h3 class="hidden">social network service</h3>
-				<ul>
+				<ul class="sns hidden_wrap">
 					<li><a href="#" target="_blank"><span>youtube</span></a></li>
 					<li><a href="#" target="_blank"><span>facebook</span></a></li>
 					<li><a href="#" target="_blank"><span>kakaotalk</span></a></li>
