--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -87,7 +87,8 @@
 					<i class="hidden"> - </i> 경기도 수원시 매산로 2가 12-1 2층 
 					<span class="hidden"> - </span> 
 					<strong>telephone</strong> 
-					<i class="hidden"> - </i> 031 243 2111
+					<i class="hidden"> - </i> 
+					031 <i class="dash"></i> 243 <i class="dash"></i> 2111
 				</p>
 				<p> &copy;2018 gcass corp.</p>
 				<!-- ⓒ   -->
@@ -103,7 +104,7 @@
 				</dl>
 
 				<h3 class="hidden">추가내용</h3>
-				<p>본 사이트는 교육용 목적으로 사용한 페이지로, 어떠한 경우라도 영리를 취하지 않습니다.</p>
+				<p>본 사이트는 교육용 목적으로 사용한 페이지로, <br /> 어떠한 경우라도 영리를 취하지 않습니다.</p>
 			</div>
 
 		</footer>
