gcass layout code

--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -96,7 +96,7 @@
 
 			<div class="more_area">
 				<h3 class="hidden">기타 gcass family 사이트</h3>
-				<dl>
+				<dl class="clearfix">
 					<dt>web page</dt>
 					<dd><a href="//www.greenart.co.kr" target="_blank">그린컴퓨터 아트학원</a></dd>
 					<dt>family cafe</dt>
