--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -112,5 +112,26 @@
 	<!-- script -->
 	<script src="../../js/base/jquery-3.3.1.min.js"></script>
 	<script src="../../js/base/jquery-ui.min.js"></script>
+	<script>
+		(function($) {
+			var com = $('.com');
+			com.html('<div class="comOuter"></div>');
+			var comOuter =  $('.comOuter');
+			comOuter.css({transform:'skew(-30deg) translate(-20%)', width:'300%', height:'100%'});
+			com.css({overflow:'hidden'});
+
+			var comOuterWidth = comOuter.width() / 4;
+
+			for(var i = 0; i < comOuterWidth; i++){
+				comOuter.append('<div class="line"></div>');
+			}
+
+			$('.line').css({marginRight:'1px', width:'1px', height:'100%', border:'1px solid #333', borderTop:0, borderBottom:0, float:'left'});
+
+
+
+
+		})(jQuery);
+	</script>
 </body>
 </html>
