--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="../../fonts/nanumFonts.css" />
 	<link rel="stylesheet" href="../../css/base/reset.css" />
 	<link rel="stylesheet" href="../../css/base/common.css" />
-	<link rel="stylesheet" href="../../css/src/gcass/layout.css" />
+	<link rel="stylesheet" href="../../css/src/gcass/main_page.css" />
 
 	<!--[if IE]>
 		<script src="../../ie/html5shiv/src/html5shiv.js"></script>
@@ -15,14 +15,14 @@
 		<script src="../../ie/css3pie/PIE_IE9.js"></script>
 		<script src="../../ie/respond/dest/respond.min.js"></script>
 	<![endif]-->
-	<title>지카스</title>
+	<title>그린컴수강생들의 사이트 지카스</title>
 </head>
 <body>
 	<!-- layout -->
 	<div id="wrap">
 		<aside id="homeBox">
 			<h2 class="hidden">sub menu</h2>
-			<ul>
+			<ul class="hidden_wrap">
 				<li><a href="#" target="_blank">
 					<span>home</span>
 				</a></li>
@@ -112,26 +112,5 @@
 	<!-- script -->
 	<script src="../../js/base/jquery-3.3.1.min.js"></script>
 	<script src="../../js/base/jquery-ui.min.js"></script>
-	<script>
-		(function($) {
-			var com = $('.com');
-			com.html('<div class="comOuter"></div>');
-			var comOuter =  $('.comOuter');
-			comOuter.css({transform:'skew(-30deg) translate(-20%)', width:'300%', height:'100%'});
-			com.css({overflow:'hidden'});
-
-			var comOuterWidth = comOuter.width() / 4;
-
-			for(var i = 0; i < comOuterWidth; i++){
-				comOuter.append('<div class="line"></div>');
-			}
-
-			$('.line').css({marginRight:'1px', width:'1px', height:'100%', border:'1px solid #333', borderTop:0, borderBottom:0, float:'left'});
-
-
-
-
-		})(jQuery);
-	</script>
 </body>
 </html>
