--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -112,5 +112,6 @@
 	<!-- script -->
 	<script src="../../js/base/jquery-3.3.1.min.js"></script>
 	<script src="../../js/base/jquery-ui.min.js"></script>
+	<!-- <script src="../../js/src/gcass/main_01.js"></script> -->
 </body>
 </html>
