--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -46,13 +46,13 @@
 
 				<nav id="gnb">
 					<h2 class="hidden">gcass 전체 메뉴</h2>
-					<ul>
-						<li><a href="#" target="_blank">about</a></li>
-						<li><a href="#" target="_blank">study</a></li>
-						<li><a href="#" target="_blank">photo</a></li>
-						<li><a href="#" target="_blank">blog</a></li>
-						<li><a href="#" target="_blank">press</a></li>
-						<li><a href="#" target="_blank">q and a</a></li> 
+					<ul class="hidden_wrap">
+						<li><a href="#" target="_blank"><span>about</span></a></li>
+						<li><a href="#" target="_blank"><span>study</span></a></li>
+						<li><a href="#" target="_blank"><span>photo</span></a></li>
+						<li><a href="#" target="_blank"><span>blog</span></a></li>
+						<li><a href="#" target="_blank"><span>press</span></a></li>
+						<li><a href="#" target="_blank"><span>question and answer</span></a></li> 
 					</ul>
 				</nav>
 			</header>
@@ -60,6 +60,7 @@
 
 			<section id="viewBox">
 				<h2 class="hidden">광고 메세지</h2>
+				<div class="com_bg"></div>
 				<div class="com">
 					<!-- 컴퓨터 이미지 삽입 -->
 				</div>
