gcass design fin

--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -83,7 +83,7 @@
 			</div>
 
 			<address class="addr_area">
-				<p>
+				<p class="hidden">
 					<strong>address</strong> 
 					<i class="hidden"> - </i> 경기도 수원시 매산로 2가 12-1 2층 
 					<span class="hidden"> - </span> 
@@ -91,17 +91,17 @@
 					<i class="hidden"> - </i> 
 					031 <i class="dash"></i> 243 <i class="dash"></i> 2111
 				</p>
-				<p> &copy;2018 gcass corp.</p>
+				<p class="hidden"> &copy;2018 gcass corp.</p>
 				<!-- ⓒ   -->
 			</address>
 
 			<div class="more_area">
 				<h3 class="hidden">기타 gcass family 사이트</h3>
-				<dl class="clearfix">
-					<dt>web page</dt>
-					<dd><a href="//www.greenart.co.kr" target="_blank">그린컴퓨터 아트학원</a></dd>
-					<dt>family cafe</dt>
-					<dd><a href="//webportfolio.github.io" target="_blank">시도 깃허브</a></dd>
+				<dl class="clearfix hidden_wrap">
+					<dt><span class="hidden">web page</span></dt>
+					<dd><a href="//www.greenart.co.kr" target="_blank"><span>그린컴퓨터 아트학원</span></a></dd>
+					<dt><span class="hidden">family cafe</span></dt>
+					<dd><a href="//webportfolio.github.io" target="_blank"><span>시도 깃허브</span></a></dd>
 				</dl>
 
 				<h3 class="hidden">추가내용</h3>
