gcass design coding

--- a/b_example/c_normal/html/gcass/main_layout.html
+++ b/b_example/c_normal/html/gcass/main_layout.html
@@ -21,7 +21,7 @@
 	<!-- layout -->
 	<div id="wrap">
 		<aside id="homeBox">
-			<h2 class="hidden">sub menu</h2>
+			<!-- <h2 class="hidden">sub menu</h2>
 			<ul class="hidden_wrap">
 				<li><a href="#" target="_blank">
 					<span>home</span>
@@ -32,13 +32,13 @@
 				<li><a href="#" target="_blank">
 					<span>education</span>
 				</a></li>
-			</ul>
+			</ul> -->
 		</aside>
 		<!-- // #homeBox -->
 
 		<div class="box_wrap clearfix">
 			<header id="headBox">
-				<h1 class="hidden_wrap">
+				<!-- <h1 class="hidden_wrap">
 					<a href="./main_layout.html">
 					<span><abbr title="greeen computer art school student web">gcass</abbr></span>
 					</a>
@@ -54,7 +54,7 @@
 						<li><a href="#" target="_blank"><span>press</span></a></li>
 						<li><a href="#" target="_blank"><span>question and answer</span></a></li> 
 					</ul>
-				</nav>
+				</nav> -->
 			</header>
 			<!-- // #headBox -->
 
@@ -67,9 +67,7 @@
 			</section>
 		</div>
 		<footer id="footBox">
-
-			<h2><span class="hidden">gcass 회사정보</span></h2>
-
+			<!-- <h2><span class="hidden">gcass 회사정보</span></h2>
 			<div class="info_area">
 				<h3 class="hidden">location</h3>
 				<p class="location hidden_wrap"><a href="#"><span>회사 위치 안내 서비스</span></a></p>
@@ -92,7 +90,7 @@
 					031 <i class="dash"></i> 243 <i class="dash"></i> 2111
 				</p>
 				<p class="hidden"> &copy;2018 gcass corp.</p>
-				<!-- ⓒ   -->
+
 			</address>
 
 			<div class="more_area">
@@ -106,13 +104,12 @@
 
 				<h3 class="hidden">추가내용</h3>
 				<p>본 사이트는 교육용 목적으로 사용한 페이지로, <br /> 어떠한 경우라도 영리를 취하지 않습니다.</p>
-			</div>
-
+			</div> -->
 		</footer>
 	</div>
 	<!-- script -->
 	<script src="../../js/base/jquery-3.3.1.min.js"></script>
 	<script src="../../js/base/jquery-ui.min.js"></script>
-	<!-- <script src="../../js/src/gcass/main_01.js"></script> -->
+	<script src="../../js/src/gcass/main_01.js"></script>
 </body>
 </html>
