--- a/b_example/a02_beginner/index.html
+++ b/b_example/a02_beginner/index.html
@@ -18,6 +18,11 @@
   <ul>
     <li><a href="./html/background_01.html">배경이미지 이해하기1</a></li>
   </ul>
+
+  <h2>table 이해하기</h2>
+  <ul>
+    <li><a href="./html/table01.html">table_01</a></li>
+  </ul>
   <!-- script -->
 <script>
   // window.location = "./html/layout_test_result_02.html";
